--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.2",
     "express": "4.17.1",
-    "joi": "^17.11.0",
+    "joi": "^17.12.0",
     "mongoose": "^8.1.0",
     "morgan": "1.10.0",
     "nanoid": "^5.0.4"
