--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.3.2",
     "express": "4.17.1",
+    "gravatar": "^1.8.2",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
@@ -23,7 +24,8 @@
     "nanoid": "^5.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "eslint": "7.19.0",
