--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.0",
     "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -26,7 +27,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
